--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuejs-avataaars",
   "private": false,
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Simple generator VueJs app for avataaars",
   "main": "./dist/avataaars.common.js",
   "scripts": {
@@ -19,9 +19,7 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "rollup-plugin-commonjs": "^10.1.0"
-  },
+  "dependencies": {},
   "files": [
     "dist/*",
     "src/*",
