--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/avataaars.common.js",
   "scripts": {
     "dev": "vue serve src/Avataaars.vue",
-    "build": "rm -rf dist && vue build --target lib --name avataaars src/entry.js"
+    "build": "rm -rf dist && vue build --target lib --name avataaars src/entry.js",
+    "test": "jest"
   },
   "homepage": "https://github.com/orgordin/vuejs-avataaars#README.md",
   "keywords": [
@@ -28,6 +29,12 @@
     "*.js"
   ],
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@vue/test-utils": "^1.4.2",
+    "babel-jest": "^29.6.4",
+    "jest": "^29.6.4",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.10"
   }
 }
